Main navigation and log styling Simplified the styling to hopefully clear up the unreproducable, squishing logo issue.

--- a/awx/ui/static/ansible-bootstrap/navbar.less
+++ b/awx/ui/static/ansible-bootstrap/navbar.less
@@ -149,7 +149,6 @@
 // Brand/project name
 
 .navbar-brand {
-  float: left;
   padding: @navbar-padding-vertical @navbar-padding-horizontal;
   font-size: @font-size-large;
   line-height: @line-height-computed;
