--- a/awx/ui/static/less/main-layout.less
+++ b/awx/ui/static/less/main-layout.less
@@ -24,20 +24,23 @@ body {
     .navbar {
         margin-bottom: 0;
     }
-    .navbar-brand {
-        position: absolute;
-        top: 6px;
-        left: 15px;
-        padding: 0px 15px 0 15px;
-        img {
-            width: 42px;
-        }
+    #ansible-brand-logo {
+        width: 42px;
+        height: 42px;
     }
-    .navbar-collapse {
+    /*.navbar-collapse {
         margin-left: 47px;
-    }
+    }*/
     .collapsed-option {
         display: none;
+    }
+    .navbar-brand {
+        padding-top: 3px;
+        padding-bottom: 3px;
+    }
+    .nav > li > a {
+        padding-top: 11px;
+        padding-bottom: 11px;
     }
 }
 
